--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
-﻿[B]1.0.3[/B]
+﻿[B]1.0.4[/B]
+- oldalváltozás lekövetve
+- kategóriák kibővítve
+- feliratok (videa forráshoz)
+[B]1.0.3[/B]
 - os verzió kiszedése
 [B]1.0.2[/B]
 - os, kodi, addon verziószám írása a logba
